notabee-backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    io.kompose.service: notabee-backend
  name: notabee-backend
spec:
  ports:
    - name: "3001"
      port: 3001
      targetPort: 3000
  selector:
    app: notabee-backend
status:
  loadBalancer: {}
